[gd_scene load_steps=36 format=3 uid="uid://b8837sg55qd8m"]

[ext_resource type="Theme" uid="uid://bm1rvmngc833v" path="res://assets/themes/theme.tres" id="1_gki2s"]
[ext_resource type="Script" uid="uid://dqrm5fg1bv6rg" path="res://src/ui/components/place_item.gd" id="1_limbe"]
[ext_resource type="Texture2D" uid="uid://cmls1puqgwrwi" path="res://assets/ui/placeholder.png" id="2_7i6jj"]
[ext_resource type="FontFile" uid="uid://hqi2efd5kd17" path="res://assets/themes/fonts/inter/Inter-Bold.ttf" id="3_wh5hw"]
[ext_resource type="FontFile" uid="uid://d2vlaexk003yw" path="res://assets/themes/fonts/inter/Inter-Medium.ttf" id="4_oea3m"]
[ext_resource type="Theme" uid="uid://chwr8vock83p4" path="res://assets/themes/dark_dcl_theme/dark_dcl_theme.tres" id="5_38j5r"]
[ext_resource type="Texture2D" uid="uid://dt2en45rqmrsa" path="res://assets/themes/dark_dcl_theme/icons/Exit.svg" id="5_x7ql2"]
[ext_resource type="Script" uid="uid://bhwm0bl5qoiph" path="res://src/ui/components/utils/safe_margin_container.gd" id="6_cpxdn"]
[ext_resource type="Texture2D" uid="uid://mkgmqaf7qdvg" path="res://assets/ui/like_solid.svg" id="6_h2ki8"]
[ext_resource type="Texture2D" uid="uid://beo554etknddh" path="res://assets/ui/PreviewIcon.svg" id="7_ytgcx"]
[ext_resource type="Texture2D" uid="uid://1bvilol5e3lf" path="res://assets/ui/Members.svg" id="8_whopg"]
[ext_resource type="Texture2D" uid="uid://2phiy0bi4o0i" path="res://assets/themes/dark_dcl_theme/icons/PinOutline.svg" id="9_jthfk"]
[ext_resource type="FontFile" uid="uid://di6yadh02vrla" path="res://assets/themes/fonts/inter/Inter-Regular.ttf" id="10_yuhpx"]
[ext_resource type="Texture2D" uid="uid://due5xfsacc6ne" path="res://assets/themes/dark_dcl_theme/icons/Map.svg" id="11_t0eof"]
[ext_resource type="Texture2D" uid="uid://b7vyl6n0g3uxh" path="res://assets/ui/JumpInIcnWhite.svg" id="12_eg42m"]
[ext_resource type="StyleBox" uid="uid://dnfryl87xc26f" path="res://src/ui/components/discover/jump_in/jump_in_button_hover.tres" id="15_7cmxw"]
[ext_resource type="StyleBox" uid="uid://bjw0qd6a67c5f" path="res://src/ui/components/discover/jump_in/jump_in_button.tres" id="15_mpouh"]
[ext_resource type="Texture2D" uid="uid://3omhfeyiw43d" path="res://assets/ui/like.svg" id="16_limbe"]
[ext_resource type="StyleBox" uid="uid://dhbw2a5306luc" path="res://src/ui/components/discover/jump_in/like_button_hover.tres" id="17_7cmxw"]
[ext_resource type="StyleBox" uid="uid://cmld8wgql6udq" path="res://src/ui/components/discover/jump_in/like_button.tres" id="17_guuy4"]
[ext_resource type="Texture2D" uid="uid://bbfacjlfqblgk" path="res://assets/ui/dislike.svg" id="17_smlb1"]
[ext_resource type="Texture2D" uid="uid://dq3skqqbudygj" path="res://assets/ui/heart.svg" id="18_mpouh"]
[ext_resource type="Texture2D" uid="uid://jwjwv7o28h0o" path="res://assets/ui/share.svg" id="19_guuy4"]
[ext_resource type="ButtonGroup" uid="uid://rsv6t7byp3yk" path="res://src/ui/components/discover/jump_in/likes_button_group_landscape.tres" id="20_ja3ps"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eaed0"]
bg_color = Color(0.92549, 0.921569, 0.929412, 1)
border_color = Color(0.988235, 0.988235, 0.988235, 1)
corner_radius_top_left = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bsiub"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.168627, 0.160784, 0.188235, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ak0ex"]

[sub_resource type="Curve" id="Curve_6fe12"]
_limits = [0.0, 2.0, 0.0, 1.0]
_data = [Vector2(0.09, 1.28552), 0.0, 0.0, 0, 0, Vector2(0.34, 1.87802), 0.0, 0.0, 0, 0, Vector2(0.966667, 0.146113), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_w2th8"]
colors = PackedColorArray(0.914015, 0.145083, 0.329259, 1, 0.917647, 0.145098, 0.329412, 0.509804)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b6og1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hhrtg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pvrec"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6svxf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_js3n0"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_g3sqq"]
color = Color(0.6, 0.6, 0.6, 1)

[node name="PanelJumpInLandscape" type="PanelContainer"]
clip_children = 2
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -324.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eaed0")
script = ExtResource("1_limbe")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TextureRect_Image" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(292, 190)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_gki2s")
texture = ExtResource("2_7i6jj")
expand_mode = 1
stretch_mode = 6

[node name="Button_Close" type="Button" parent="VBoxContainer/TextureRect_Image"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("5_38j5r")
theme_override_colors/icon_pressed_color = Color(0.443137, 0.419608, 0.486275, 1)
theme_override_colors/font_pressed_color = Color(0.443137, 0.419608, 0.486275, 1)
theme_override_constants/icon_max_width = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_bsiub")
icon = ExtResource("5_x7ql2")
icon_alignment = 1
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("6_cpxdn")
default_margin = 10
use_left = false
use_top = false
use_bottom = false

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="HBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label_Title" type="Label" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.0862745, 0.0823529, 0.0941176, 1)
theme_override_fonts/font = ExtResource("3_wh5hw")
theme_override_font_sizes/font_size = 20
text = "Scene Title
"
autowrap_mode = 2

[node name="HBoxContainer_Creator" type="HBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer_Creator"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.0862745, 0.0823529, 0.0941176, 1)
theme_override_font_sizes/font_size = 12
text = "created by"

[node name="Label_Creator" type="Label" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer_Creator"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.0862745, 0.0823529, 0.0941176, 1)
theme_override_fonts/font = ExtResource("3_wh5hw")
theme_override_font_sizes/font_size = 12
text = "Kuruk"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_ak0ex")

[node name="Label_LocationTitle2" type="Label" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.443137, 0.419608, 0.486275, 1)
theme_override_fonts/font = ExtResource("4_oea3m")
theme_override_font_sizes/font_size = 12
text = "STATS "
clip_text = true

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HBoxContainer_Likes" type="HBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="CPUParticles2D" type="CPUParticles2D" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3/HBoxContainer_Likes"]
position = Vector2(11, 21)
emitting = false
amount = 20
lifetime = 0.2
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 9.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 60.0
initial_velocity_max = 60.0
damping_min = 30.0
damping_max = 30.0
scale_amount_curve = SubResource("Curve_6fe12")
color = Color(0.960784, 0.152941, 0.345098, 1)
color_ramp = SubResource("Gradient_w2th8")

[node name="Button_Like" type="Button" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3/HBoxContainer_Likes"]
modulate = Color(0.0862745, 0.0823529, 0.0941176, 1)
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
theme = ExtResource("5_38j5r")
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_constants/icon_max_width = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_b6og1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_hhrtg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_pvrec")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6svxf")
theme_override_styles/normal = SubResource("StyleBoxEmpty_js3n0")
toggle_mode = true
icon = ExtResource("6_h2ki8")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Label_Likes" type="Label" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3/HBoxContainer_Likes"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_38j5r")
theme_override_colors/font_color = Color(0.0862745, 0.0823529, 0.0941176, 1)
theme_override_fonts/font = ExtResource("3_wh5hw")
theme_override_font_sizes/font_size = 14
text = "78%"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer_Views" type="HBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3/HBoxContainer_Views"]
modulate = Color(0.0862745, 0.0823529, 0.0941176, 1)
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("7_ytgcx")
expand_mode = 1
stretch_mode = 5

[node name="Label_Views" type="Label" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3/HBoxContainer_Views"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_38j5r")
theme_override_colors/font_color = Color(0.0862745, 0.0823529, 0.0941176, 1)
theme_override_fonts/font = ExtResource("3_wh5hw")
theme_override_font_sizes/font_size = 14
text = "546"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Container_Online" type="HBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3/Container_Online"]
modulate = Color(0.0862745, 0.0823529, 0.0941176, 1)
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("8_whopg")
expand_mode = 1
stretch_mode = 5

[node name="Label_Online" type="Label" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3/Container_Online"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_38j5r")
theme_override_colors/font_color = Color(0.0862745, 0.0823529, 0.0941176, 1)
theme_override_fonts/font = ExtResource("3_wh5hw")
theme_override_font_sizes/font_size = 14
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label_LocationTitle" type="Label" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.443137, 0.419608, 0.486275, 1)
theme_override_fonts/font = ExtResource("4_oea3m")
theme_override_font_sizes/font_size = 12
text = "LOCATION"
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
texture = ExtResource("9_jthfk")
expand_mode = 1
stretch_mode = 5

[node name="Label_Location" type="Label" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.0862745, 0.0823529, 0.0941176, 1)
theme_override_fonts/font = ExtResource("10_yuhpx")
theme_override_font_sizes/font_size = 13
text = "0, 0"

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("11_t0eof")
expand_mode = 1
stretch_mode = 5

[node name="Label_Realm" type="Label" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.0862745, 0.0823529, 0.0941176, 1)
theme_override_fonts/font = ExtResource("10_yuhpx")
theme_override_font_sizes/font_size = 13
text = "Genesis City "
clip_text = true

[node name="Button_JumpIn" type="Button" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover_pressed = ExtResource("15_mpouh")
theme_override_styles/hover = ExtResource("15_7cmxw")
theme_override_styles/pressed = ExtResource("15_mpouh")
theme_override_styles/normal = ExtResource("15_mpouh")
text = "JUMP IN"
icon = ExtResource("12_eg42m")
icon_alignment = 2
expand_icon = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Button_Like" type="Button" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(46, 46)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_type_variation = &"WhiteButton"
theme_override_colors/icon_hover_pressed_color = Color(1, 0.176471, 0.333333, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.176471, 0.333333, 1)
theme_override_styles/hover_pressed = ExtResource("17_7cmxw")
theme_override_styles/hover = ExtResource("17_7cmxw")
theme_override_styles/pressed = ExtResource("17_guuy4")
theme_override_styles/normal = ExtResource("17_guuy4")
toggle_mode = true
button_group = ExtResource("20_ja3ps")
icon = ExtResource("16_limbe")
icon_alignment = 1
expand_icon = true

[node name="Button_Dislike" type="Button" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(46, 46)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_type_variation = &"WhiteButton"
theme_override_colors/icon_hover_pressed_color = Color(1, 0.176471, 0.333333, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.176471, 0.333333, 1)
theme_override_styles/hover_pressed = ExtResource("17_7cmxw")
theme_override_styles/hover = ExtResource("17_7cmxw")
theme_override_styles/pressed = ExtResource("17_guuy4")
theme_override_styles/normal = ExtResource("17_guuy4")
toggle_mode = true
button_group = ExtResource("20_ja3ps")
icon = ExtResource("17_smlb1")
icon_alignment = 1
expand_icon = true

[node name="Button_Fav" type="Button" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(46, 46)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_type_variation = &"WhiteButton"
theme_override_colors/icon_hover_pressed_color = Color(1, 0.176471, 0.333333, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.176471, 0.333333, 1)
theme_override_styles/hover_pressed = ExtResource("17_7cmxw")
theme_override_styles/hover = ExtResource("17_7cmxw")
theme_override_styles/pressed = ExtResource("17_guuy4")
theme_override_styles/normal = ExtResource("17_guuy4")
toggle_mode = true
icon = ExtResource("18_mpouh")
icon_alignment = 1
expand_icon = true

[node name="Button_Share" type="Button" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(46, 46)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_type_variation = &"WhiteButton"
disabled = true
toggle_mode = true
icon = ExtResource("19_guuy4")
icon_alignment = 1
expand_icon = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxLine_g3sqq")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label_DescriptionTitle" type="Label" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.443137, 0.419608, 0.486275, 1)
theme_override_fonts/font = ExtResource("4_oea3m")
theme_override_font_sizes/font_size = 12
text = "DESCRIPTION"
clip_text = true

[node name="Label_Description" type="Label" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0.0862745, 0.0823529, 0.0941176, 1)
theme_override_fonts/font = ExtResource("10_yuhpx")
theme_override_font_sizes/font_size = 13
autowrap_mode = 2

[connection signal="pressed" from="VBoxContainer/TextureRect_Image/Button_Close" to="." method="_on_button_close_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/Button_JumpIn" to="." method="_on_button_jump_in_pressed"]
[connection signal="toggled" from="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2/Button_Like" to="." method="_on_button_like_toggled"]
[connection signal="toggled" from="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2/Button_Dislike" to="." method="_on_button_dislike_toggled"]
[connection signal="toggled" from="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2/Button_Fav" to="." method="_on_button_fav_toggled"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2/Button_Share" to="." method="_on_button_share_pressed"]
